---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-12-31
  Features:
    - Added large radiator
    - Normal and large radiator require coolant (can be disabled in settings)
  Changes:
    - Normal radiator technology now costs 2000 science and needs Vulcanus and Fulgora science
    - Normal radiator requires LDS instead of lithium plates
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-12-24
  Features:
    - Initial version