@@ -1,4 +1,4 @@
-require("prototypes.add-interfaces")
+require("prototypes.add-interfaces") -- Must be applied at data stage
 require("prototypes.recipes")
 require("prototypes.radiators")
 require("prototypes.technologies")
